<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.sanyan</groupId>
    <artifactId>sanyan-server-parent</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <modules>
        <module>foundation_packages/sanyan-common-error</module>
        <module>foundation_packages/sanyan-common-web</module>
        <module>foundation_packages/sanyan-common-auth</module>
        <module>foundation_packages/sanyan-common-cache</module>
        <module>foundation_packages/sanyan-common-storage</module>
        <module>foundation_packages/sanyan-common-util</module>
        <module>foundation_packages/sanyan-common-test</module>
        <module>foundation_packages/sanyan-common-ws</module>
        <module>business_packages/sanyan-business</module>
        <module>business_packages/sanyan-memory-api</module>
        <module>business_packages/sanyan-memory-core</module>
        <module>business_packages/sanyan-embedding-api</module>
        <module>business_packages/sanyan-embedding-core</module>
        <module>bootstrap</module>
        <module>embedding-bootstrap</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 内部模块统一版本 -->
            <dependency><groupId>com.sanyan</groupId><artifactId>sanyan-common-error</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.sanyan</groupId><artifactId>sanyan-common-web</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.sanyan</groupId><artifactId>sanyan-common-auth</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.sanyan</groupId><artifactId>sanyan-common-cache</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.sanyan</groupId><artifactId>sanyan-common-storage</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.sanyan</groupId><artifactId>sanyan-common-util</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.sanyan</groupId><artifactId>sanyan-common-test</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.sanyan</groupId><artifactId>sanyan-common-ws</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.sanyan</groupId><artifactId>sanyan-business</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.sanyan</groupId><artifactId>sanyan-memory-api</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.sanyan</groupId><artifactId>sanyan-memory-core</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.sanyan</groupId><artifactId>sanyan-embedding-api</artifactId><version>${project.version}</version></dependency>
            <dependency><groupId>com.sanyan</groupId><artifactId>sanyan-embedding-core</artifactId><version>${project.version}</version></dependency>

            <!-- 第三方库锁版本 -->
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>1.2.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-database-postgresql</artifactId>
                <version>10.10.0</version>
            </dependency>

            <!-- Testcontainers BOM 锁版本（>=1.20 才兼容 Docker API 1.44+） -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>1.21.3</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.4.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.1.2</version>
                    <configuration>
                        <includes><include>**/*IT.java</include></includes>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- 全模块强制校验 Maven / Java 版本 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals><goal>enforce</goal></goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.6.3</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>17</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
